Changelog
=========

5.6-dev - (unreleased)
----------------------
* Bug fix: send proper AT events when editing in aggregated edit; fixes
  plone.app.contentrules integration
  [tiberich #10038]

5.5 - (2012-11-23)
------------------
* Bug fix: fix small bug introduced by refactoring in RelatedItems view
  [tiberich]

5.4 - (2012-11-22)
------------------
* Bug fix: fixed layout issue when message is large.
  [demarant]

5.3 - (2012-11-22)
------------------
* Bug fix: data providers name is now correctly shown for external data.
  regression issue was introduced in refs #9217.
  [demarant fixes #9988]
* Bug fix: add a status message when failing to set figure files in the
  same state as their parents during assessment state change. Also make the
  readiness check to check if publish transition is actually available to the
  current user.
  [tiberich refs #9974]
* Feature: also list DavizVisualizations in assessment 
  [tiberich #9571]
* Bug fix: always return a string from customized Titles
  [tiberich #5630]
* Bug fix: adapt rdfmarshaller code to api changes in eea.rdfmarshaller
  [tiberich #3981]
* Code cleanup in several modules to clean pyflakes warnings
  [tiberich]
* Change: removed references to relatedProducts
  [ghicaale #6773]
* Upgrade Step: import "EEA Daviz:eea.relations integration" -> javascripts in
  portal_setup
  [tiberich refs #9571]

5.2 - (2012-09-27)
------------------
* Change: Update references to eea.depiction (formerly valentine.imagescales)
  [voineali refs #5497]

5.1 - (2012-08-27)
------------------
* Change: made description and data path optional field for external data spec.
  [demarant fixes #5478]
* Bug fix: when creating a new assessment, properly copy the related items
  [tiberich refs #5462]

5.0 - (2012-07-13)
------------------
* Feature: Show old provider name for legacy reasons on old external data spec
  which misses a real Organisation.
  [demarant fixes #5232]